--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,8 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>Todo</title>
-    <link rel="stylesheet" href="./index.css" />
-    <link rel="stylesheet" href="./checkbox.css" />
+    <!--<link rel="stylesheet" href="./index.css" /> -->
+    <link rel="stylesheet" href={% static 'styles/index.css' %} />
+    <!--<link rel="stylesheet" href="./checkbox.css" /> -->
+    <link rel="stylesheet" href={% static 'styles/checkbox.css' %} />
     
 
 </head>
