--- a/main/templates/newpage.html
+++ b/main/templates/newpage.html
@@ -10,6 +10,7 @@
     <div class="container">
         <div class="box"></div>
         <div class="box"></div>
+        <div class="box"
     </div>
 </body>
 </html>
