--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h2>Это тестовая страница<h2>
-        {{ todo_list}}
+    {% for todo in todo_list %}
+    <h3>{{ todo.text }} - {{ todo.created_at }}</h3>
+    {% endfor %}
 </body>
 </html>
