--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -36,8 +36,8 @@
                 <div class="todo_item_footer">
                     <p>{{ todo.created_at }}</p>
                     <div class="action_buttons">
-                        <img src="./unmarked3.png">
-                        <img src="./delete.png">
+                        <img src="{% static './icons/unmarked3.png' %}" />
+                        <img src="{% static './icons/delete.png' %}" />
                     </div>
                 </div>
             </div>
